@@ -1,3 +1,7 @@
+19/6/12
+  Defined the RC FILE as $HOME/.config/snapwm/rc.conf
+  Changed the config.h.def to be generic not as I use config.h
+
 6/6/12
   Changed number of SHOWNUMOPEN from number+colon to a meter at the bottom of the switcher
 
